Fix T55547: "Fit camera to selected" fails